--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-% update docs with specific instructions for a component(s)
 ------------------------------------done---------------------------------------
++ update docs with specific instructions for a component(s)
 + implement component
 + update package.json with project specific data
