--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 ------------------------------------done---------------------------------------
++ publish initial version
 + update docs with specific instructions for a component(s)
 + implement component
 + update package.json with project specific data
